update tikz code in guia 1

--- a/1-guia/ejercicios-1/ej-11-1.tex
+++ b/1-guia/ejercicios-1/ej-11-1.tex
@@ -1,26 +1,34 @@
 \begin{enunciado}{\ejercicio}
   Hallar contraejemplos para mostrar que las siguientes proposiciones son falsas:
+  \begin{enumerate}[label=\roman*)]
+    \item $\paratodo a \en \naturales,\, \frac{a - 1}{a}$ no es un número entero.
+    \item $\paratodo x,\, y \en \reales$ con $x,\, y$ positivos, $\sqrt{x + y} = \sqrt{x} + \sqrt{y}$.
+    \item $\paratodo x \en \reales,\, x^2 > 4 \entonces x > 2$.
+  \end{enumerate}
 \end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
-  \item $\paratodo a \en \naturales,\, \frac{a-1}{a}$ no es un número entero.\par
-        La proposición es falsa, dado que si
+  \item La proposición es falsa, dado que si:
         $a = \green{1}
           \entonces
           \frac{\green{1} - 1}{\green{1}} =
           \frac{0}{1} =
           0 \en \enteros$
 
-  \item $\paratodo x, y \en \reales$ con $x, y$ positivos, $\sqrt{x+y} = \sqrt{x} + \sqrt{y}$.\par
-        La proposición es falsa, dado que si.\par
+  \item La proposición es falsa, dado que si:
         $$
-          \llaves{c}{
-            x = 2.\\
-            y = 2
-          } \to \sqrt{2 + 2} = \sqrt{4} = 2 \distinto \sqrt{2} + \sqrt{2} = \sqrt{2}
+          x = 2
+          ~ \land ~
+          y = 2
+          \entonces
+          \sqrt{2 + 2} = \sqrt{4} = 2 \distinto \sqrt{2} + \sqrt{2} = 2 \cdot \sqrt{2}
         $$
-  \item $\paratodo x \en \reales,\, x^2 > 4 \entonces x > 2$.\par
-        La  proposición es falsa, dado que si $x = -3$, queda $9 > 4 \entonces -3 > 2$, lo cual es falso.
+
+  \item La  proposición es falsa, dado que si:
+        $$
+          x = -3 \entonces 9 > 4 \Entonces{\red{\skull}} -3 > 2
+        $$
+        Y eso no es verdad.
 \end{enumerate}
 
 \begin{aportes}
