--- a/1-guia/ejercicios-1/ej-29-1.tex
+++ b/1-guia/ejercicios-1/ej-29-1.tex
@@ -13,6 +13,15 @@
   \node[container={$A$}, fit={(1) (2) (3) (4) (5)}]  {};
   \node[container={$B$}, fit={(a) (b) (c) (d)}]  {};
 }
+\tikzset{
+plot style/.style={
+scale = 0.4,
+node distance=0.8cm,
+nodo/.style={circle, fill=black, color=##1, minimum size = 2pt, inner sep = 1pt},
+arista/.style={-{Latex[length=3pt]}, ultra thin, bend left=25, color=##1},
+container/.style={draw, rectangle, rounded corners = 10pt,label=above:##1, inner sep=15pt}
+}
+}
 
 \begin{enunciado}{\ejercicio}
   Determinar si $\relacion$ es una función de $A$ en $B$ en los casos
@@ -29,14 +38,7 @@
 \begin{enumerate}[label=\roman*)]
   \item No es función, dado que $3 \relacion a$, $3 \relacion d$ y $a \distinto d$
         $$
-          \begin{tikzpicture}
-            [
-            scale = 0.4,
-            node distance=0.8cm,
-            nodo/.style={circle, fill=black, color={#1}, minimum size = 2pt, inner sep = 1pt},
-            arista/.style={-{Latex[length=3pt]}, ultra thin, bend left=25, color={#1}},
-            container/.style={draw, rectangle, rounded corners = 10pt,label=above:#1, inner sep=15pt}
-            ]
+          \begin{tikzpicture} [plot style]
             \nodosVeintinueve
             \draw[arista=Cerulean] (1) to (a);
             \draw[arista=Cerulean] (2) to (a);
@@ -50,14 +52,7 @@
 
   \item No es función, dado que \ul{todo} elemento de $A$ tiene que estar relacionado a algún elemento de $B,\, 5 \norelacion y$ para ningún $ y \en B$
         $$
-          \begin{tikzpicture}
-            [
-            scale = 0.4,
-            node distance=0.8cm,
-            nodo/.style={circle, fill=black, color={#1}, minimum size = 2pt, inner sep = 1pt},
-            arista/.style={-{Latex[length=3pt]}, ultra thin, bend left=25, color={#1}},
-            container/.style={draw, rectangle, rounded corners = 10pt,label=above:#1, inner sep=15pt}
-            ]
+          \begin{tikzpicture}[plot style]
             \nodosVeintinueve
             \draw[arista=Cerulean] (1) to (a);
             \draw[arista=Cerulean] (2) to (a);
@@ -69,14 +64,7 @@
 
   \item Es función.
         $$
-          \begin{tikzpicture}
-            [
-            scale = 0.4,
-            node distance=0.8cm,
-            nodo/.style={circle, fill=black, color={#1}, minimum size = 2pt, inner sep = 1pt},
-            arista/.style={-{Latex[length=3pt]}, ultra thin, bend left=25, color={#1}},
-            container/.style={draw, rectangle, rounded corners = 10pt,label=above:#1, inner sep=15pt}
-            ]
+          \begin{tikzpicture} [plot style]
             \nodosVeintinueve
             \draw[arista=Cerulean] (1) to (a);
             \draw[arista=Cerulean] (2) to (a);
