agrego ej22-4 y cambios varios

--- a/4-guia/ejercicios-4/ej-20-4.tex
+++ b/4-guia/ejercicios-4/ej-20-4.tex
@@ -23,7 +23,7 @@
             d \divideA 5a + 8 \\
             d \divideA 7a + 3
           }
-          \Sii{$7F_1 - 5F_2 \to F_2$}
+          \Entonces{$7F_1 - 5F_2 \to F_2$}
           \llave{l}{
             d \divideA 5a + 8 \\
             d \divideA 41
@@ -53,12 +53,12 @@
             d \divideA 2a^2 + 3a - 1 \\
             d \divideA 5a + 6
           }
-          \Sii{$5F_1 - 2a F_2 \to F_1$}
+          \Entonces{$5F_1 - 2a F_2 \to F_1$}
           \llave{l}{
             d \divideA 3a - 5\\
             d \divideA 5a + 6
           }
-          \Sii{$5F_1 - 3 F_2 \to F_2$}
+          \Entonces{$5F_1 - 3 F_2 \to F_2$}
           \llave{l}{
             d \divideA 3a -5\\
             d \divideA -43
@@ -107,12 +107,12 @@
             d \divideA a^2 -3a + 2\\
             d \divideA 6a - 8
           }
-          \Sii{$6F_1 - 2a F_2 \to F_1$}[$a \distinto 0$]
+          \Entonces{$6F_1 - 2a F_2 \to F_1$}[$a \distinto 0$]
           \llave{l}{
             d \divideA  -2a + 12\\
             d \divideA 6a - 8
           }
-          \Sii{$3F_1 + F_2 \to F_1$}
+          \Entonces{$3F_1 + F_2 \to F_1$}
           \llamada1
           \llave{l}{
             d \divideA  28\\
