--- a/4-guia/ejercicios-4/ej-21-4.tex
+++ b/4-guia/ejercicios-4/ej-21-4.tex
@@ -9,7 +9,7 @@ $$
     d \divideA 7a-3b\\
     d \divideA 2a-b
   }
-  \Sii{$2F_1 - 7F_2 \to F_1$}
+  \Entonces{$2F_1 - 7F_2 \to F_1$}
   \llave{l}{
     d \divideA b\\
     d \divideA 2a-b
@@ -21,7 +21,7 @@ $$
     d \divideA 7a-3b\\
     d \divideA 2a-b
   }
-  \Sii{$F_1 - 3F_2 \to F_2$}
+  \Entonces{$F_1 - 3F_2 \to F_2$}
   \llave{l}{
     d \divideA 7a-3b\\
     d \divideA a
