--- a/4-guia/ejercicios-4/ej-22-4.tex
+++ b/4-guia/ejercicios-4/ej-22-4.tex
@@ -16,7 +16,7 @@ $$
     b &=& 2B
   }
 $$
-Donde ahora $(A:B) = 1$. Reemplazando en la expresión de $d$ obtengo así una expresion para $D$:
+Donde ahora $(A:B) = 1$. Reemplazando en la expresión de $d$ obtengo así una para $D$:
 $$
   d =
   (7\cdot 2A + 3\cdot 2B : 4 \cdot 2A - 5 \cdot 2B) =
