--- a/3-guia/ejercicios-3/ej-32-3.tex
+++ b/3-guia/ejercicios-3/ej-32-3.tex
@@ -10,24 +10,53 @@
 \end{enunciado}
 
 \begin{enumerate}[label=\alph*)]
- \item Recordemos que una relacion de equivalencia en $A$ parte al conjunto en suboconjuntos disjuntos, luego por 
- enunciado me piden que cada $a \in A$ su clase de equivalencia tenga $n$ elementos, por lo tanto vamos a tener que partir 
- a $A$ en 2 subconjuntos. La idea es la siguiente, fijo un elemento $a_0 \in A$, luego tengo que relacionar ese consigo mismo y con
- $n - 1$ elementos mas, de esa forma creo una clase con $n$ elementos, y automaticamente la otra clase de equivalencia queda determinada. 
- Esto seria $\binom{2n}{n}$. Y tenemos que dividir por $2!$ ya que el orden en el que realizamos las operaciones no afecta el conteo total. 
- Finalmente seria 
- $$
- \cajaResultado{\binom{2n}{n} \cdot 1 \cdot \frac{1}{2!}}
- $$
+  \item Una relación de equivalencia en $A$ parte al conjunto en \ul{subconjuntos disjuntos}, que tiene las propiedades de
+        ser \textit{reflexiva}, \textit{simétrica} y \textit{transitiva}.
 
- \item Este es similar al anterior, vamos a tener que armar en total $3$ clases de equivalencia, primero de los $3n$ elementos elijo $n$, luego 
- me quedan $2n$ elementos restantes, de los cuales tambien elijo $n$, luego quedan $n$ que es la clase final (ya quedo determinada por las elecciones anteriores), luego 
- dividimos por $3!$ ya que el orden en el que hagamos las operaciones no cambia el conteo final. 
- $$
- \cajaResultado{\binom{3n}{n} \cdot \binom{2n}{n} \cdot 1 \cdot \frac{1}{3!}}
- $$
+        Por enunciado me piden que para cada $a \en A$ su clase de equivalencia tenga $n$ elementos, por lo tanto vamos a tener que partir
+        a $A$ en 2 subconjuntos.
+        La idea es la siguiente: Tomo un elemento $a_0 \en A$, lo relaciono consigo mismo y con otros $n - 1$ elementos más.
+        De esa forma creo una clase con $n$ elementos:
+        $$
+          \clase{a_0} \ytext \#\clase{a_0} = n,
+        $$
+        Solo usé $n$ elementos de $A$ para armar $\clase{a_0}$, entonces automáticamente la otra clase de equivalencia queda determinada también
+        con $n$ elementos.
+
+        Dado que podría realizar esa construcción con cualquiera $n$ elementos de $A$, tengo en total:
+        $$
+          \binom{2n}{n}
+        $$
+        posibles clases.
+
+        Una vez armada una clase en particular $\clase{a_0}$ me quedan $n$ elementos para armar la otra clase en particular.
+        Haciendo la misma contrucción podría armar:
+        $$
+          \binom{n}{n}
+        $$
+        Por lo tanto es tentador pensar que hay en total:
+        $$
+          \binom{2n}{n} \cdot \binom{n}{n},
+        $$
+        \red{peeeero, hay que tener cuidado!} Hay que dividir por $2!$ ya que el orden
+        en el que realizamos la construcción de cada clase no debería ser computado como distintos resultados totales.
+        Finalmente:
+        $$
+          \cajaResultado{\binom{2n}{n} \cdot 1 \cdot \frac{1}{2!}}
+        $$
+
+  \item Este es similar al anterior, vamos a tener que construir en total $3$ clases de equivalencia.
+
+        Primero de los $3n$ elementos elijo $n$, $\binom{3n}{n}$,
+        me quedan $2n$ restantes, de los cuales tambien elijo $n$, $\binom{2n}{n}$,
+        repito con los $n$ que quedan formando la clase final (ya quedo determinada por las elecciones anteriores).
+
+        Finalmente dividimos por $3!$ ya que el orden en el que hagamos las operaciones no debería afectar el conteo final.
+        $$
+          \cajaResultado{\binom{3n}{n} \cdot \binom{2n}{n} \cdot 1 \cdot \frac{1}{3!}}
+        $$
 \end{enumerate}
 
 \begin{aportes}
- \item \aporte{https://github.com/sigfripro}{sigfripro \github}
+  \item \aporte{https://github.com/sigfripro}{sigfripro \github}
 \end{aportes}
